public static class SoldierAnimationTriggerNames
{
    public static string IdleToMove = nameof(IdleToMove);
    public static string MoveToIdle = nameof(MoveToIdle);
    public static string IdleToAttack = nameof(IdleToAttack);
    public static string Dying = nameof(Dying);
    public static string AttackToIdle = nameof(AttackToIdle);
}
